# AoC

./: .gitignore  CMakeLists.txt
2025/: 1.py  10.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
game2015/: 1.py  2.cxx  2015_20_rk.py  3.cxx  4.cxx  5.cxx  6.cxx  7.cxx  8.cxx  9.cxx
include/: util.h
src/: util.cxx
